1-pathetic-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathetic-nginx-deployment
spec:
  selector:
    matchLabels:
      app: pat-nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: pat-nginx
        version: pathetic
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.4
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: pat-nginx-index-vol
        - mountPath: /etc/nginx/nginx.conf
          name: pat-nginx-conf-vol
          subPath: nginx.conf
      volumes:
      - name: pat-nginx-index-vol
        hostPath:
          path: /home/El_Coyote/html/index.html
          type: File
      - name: pat-nginx-conf-vol
        configMap:
          name: pat-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
