2-pathetic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pathetic-nginx
  labels:
    app: pat-nginx
spec:
  type: NodePort
  selector:
    app: pat-nginx
  ports:      
    - port: 80
      targetPort: 80
      nodePort: 32547
