4-kiali-open.yaml
apiVersion: v1
kind: Service
metadata:
  name: pathetic-kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  type: NodePort
  selector:
    app: kiali
  ports:      
    - port: 20001
      targetPort: 20001
      nodePort: 32548
