7-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.12.0
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.28.4
  clusterIPs:
  - 10.96.28.4
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 30696
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31103
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 32709
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp
    nodePort: 30982
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 31569
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
